--- a/login.html
+++ b/login.html
@@ -13,9 +13,9 @@
         <div>
             <h1>FAÇA SEU LOGIN</h1>
             <form>
-                <input type="text" placeholder="usuario" id="usuario" value=""><br>
-                <input type="password" placeholder="senha" id="senha"><br>
-                <input type="button" value="Entrar" onclick="validateLogin()">
+                <input type="text" placeholder="usuario" id="user" value=""><br>
+                <input type="password" placeholder="senha" id="pwd"><br><br>
+                <input type="button" id="btnLogin" value="Entrar" onclick="validateLogin()">
             </form>
             <p>Não é cadastrado? <a href="cadastro.html">Cadastre-se aqui</a></p>
         </div>
